<resources>

    <string name="app_name">GeoReporter</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_report">Report</string>
    <string name="menu_archive">My Reports</string>
    <string name="menu_about">About</string>
    <string name="title_activity_main">GeoReporter</string>
    <string name="tab_personal_info">Personal Info</string>
    <string name="tab_servers">Servers</string>
    <string name="button_add_server">Add Server</string>
    <string name="button_accept_error">Dismiss</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="jurisdiction_id">Jurisdiction ID</string>
    <string name="api_key">Api Key</string>
    <string name="format">Format</string>
    <string name="supports_media">Supports Media</string>
    <string name="dialog_loading_services">Loading service information</string>
    <string name="dialog_posting_service">Posting service request</string>
    <string name="choose_media_source">Choose source of picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="report_status">Status</string>
    <string name="report_attributes">Attributes</string>
    <string name="report_description">Description of problem</string>
    <string name="report_date">Reported Date</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="radio_button_normal">Standard</string>
    <string name="radio_button_hybrid">Hybrid</string>
    <string name="radio_button_satellite">Satellite</string>
    
</resources>