<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:ems="10"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/jurisdiction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jurisdiction_id"
        android:inputType="textUri"
        android:ems="10" />

    <EditText
        android:id="@+id/api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/api_key"
        android:ems="10" />
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dip">
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/format"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <Spinner
	        android:id="@+id/format"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	    
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:paddingLeft="8dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supports_media"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/supports_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/yes"
            android:textOff="@string/no" />

    </LinearLayout>

</LinearLayout>