<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_report"
        android:title="@string/menu_report"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_start_conversation" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/action_settings"/>
    <item android:id="@+id/menu_archive"
        android:orderInCategory="102"
        android:title="@string/menu_archive"
        android:icon="@drawable/ic_menu_archive"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_about"
        android:orderInCategory="103"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="ifRoom" />
</menu>
